--- a/package.json
+++ b/package.json
@@ -5,5 +5,13 @@
   "main": "index.js",
   "repository": "https://github.com/nosajio/modularscale",
   "author": "Jason Howmans <jason@nosaj.io>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build-jsx": "babel --plugins transform-react-jsx ./examples/styled-components/example.jsx --out-file ./examples/styled-components/example.js"
+  },
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "styled-components": "^2.4.0"
+  }
 }
