--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
   "author": "Jason Howmans <jason@nosaj.io>",
   "license": "MIT",
   "scripts": {
-    "build-jsx": "babel --plugins transform-react-jsx ./examples/styled-components/example.jsx --out-file ./examples/styled-components/example.js"
+    "build-js": "webpack --config ./examples/styled-components/webpack.config.js"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "styled-components": "^2.4.0"
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "styled-components": "^2.4.0",
+    "webpack": "^3.10.0"
   }
 }
