--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Jason Howmans <jason@nosaj.io>",
   "license": "MIT",
   "scripts": {
-    "build-js": "webpack --config ./examples/styled-components/webpack.config.js"
+    "build-js": "webpack --config ./examples/webpack.config.js"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
