--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "modularscale-helpers",
   "version": "1.1.0",
   "description": "Tools for using the modular scale in different languages.",
-  "main": "js/ms-bundle.js",
+  "main": "dist/ms-bundle.js",
   "repository": "https://github.com/nosajio/modularscale",
   "author": "Jason Howmans <jason@nosaj.io>",
   "license": "MIT",
